# mcp-server-template

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
.githooks/: pre-push
.github/: dependabot.yml  pull_request_template.md
scripts/: check_jwt_allowlist.py  check_no_print.py  check_pydantic_inputs.py
src/: base_module.py  fetcher.py  health.py  main.py  module_util.py
src/custom_components/: example_tool.py
src/pkg/: util.py
tests/: test_check_jwt_allowlist.py  test_check_no_print.py  test_check_pydantic_inputs.py  test_example_tool.py  test_fetcher.py  test_health.py  test_main.py  test_module_util.py  test_util.py
