[tool.poetry]
name = "service_mcp"
version = "0.0.1"
description = "MCP server for {{SERVICE}}. Replace when scaffolding from template."
authors = []
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastmcp = "^3.2.0"
mcp = "^1.21.2"
httpx = "^0.28"
pydantic = "^2.7"
prometheus-client = ">=0.20,<0.26"
python-json-logger = "^4.1"
uvicorn = { version = ">=0.35,<0.50", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.12"
mypy = ">=1.10,<3.0"
pytest = "^9.0"
pytest-asyncio = "^1.3.0"
respx = "^0.23.1"
pre-commit = "^4.2"

[tool.mcp-template]
# pyjwt and authlib are transitive deps of fastmcp; this service does not use them directly.
jwt-allowlist = ["pyjwt", "authlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
asyncio_mode = "strict"

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
strict = true
mypy_path = ["src"]
explicit_package_bases = true
